Better logging and swagger fixes
