# docs/swagger.json
@@ -210,7 +210,7 @@
             }
         },
         "/board/": {
-            "get": {
+            "post": {
                 "description": "Получить доску",
                 "consumes": [
                     "application/json"
@@ -225,11 +225,11 @@
                 "parameters": [
                     {
                         "description": "id доски",
-                        "name": "boardRequest",
+                        "name": "boardID",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.IndividualBoardRequest"
+                            "$ref": "#/definitions/dto.BoardID"
                         }
                     }
                 ],
@@ -417,7 +417,7 @@
                 }
             }
         },
-        "/board/update/change_thumbnail": {
+        "/board/update/change_thumbnail/": {
             "post": {
                 "description": "Обновить картинку доску",
                 "consumes": [
@@ -1215,9 +1215,6 @@
         "doc_structs.AllWorkspacesResponse": {
             "type": "object",
             "properties": {
-                "user": {
-                    "$ref": "#/definitions/entities.User"
-                },
                 "workspaces": {
                     "$ref": "#/definitions/dto.AllWorkspaces"
                 }
@@ -1267,7 +1264,7 @@
             "type": "object",
             "properties": {
                 "user": {
-                    "$ref": "#/definitions/entities.User"
+                    "$ref": "#/definitions/dto.UserPublicInfo"
                 }
             }
         },
@@ -1317,17 +1314,6 @@
             "type": "object",
             "properties": {
                 "board_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "dto.IndividualBoardRequest": {
-            "type": "object",
-            "properties": {
-                "board_id": {
-                    "type": "integer"
-                },
-                "user_id": {
                     "type": "integer"
                 }
             }
